--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,7 @@
     ]
   },
   "include": [
-    "svg.d.ts",
+    "img.d.ts",
     "dist/types/**/*.ts",
     "next-env.d.ts",
     "public/assets",
