fix: tsconfig next/image 타입 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "@apis/*": ["src/apis/*"],
       "@utils/*": ["src/utils/*"]
     },
-    "types": ["node"],
+    "types": ["node", "next", "next/image-types/global"],
     /* Bundler mode */
     "moduleResolution": "node",
     "resolveJsonModule": true,
